Fix clearing issues on community and FAQ pages
These pages don't clear their content, which results in a weird grey
border going through their headers, which is a result of the top border
of the footer element. Add some extra padding to the body columns of
these pages and clear the footer to get rid of these artifacts.

Reviewed-on: http://gerrit.cloudera.org:8080/1281
Tested-by: Mike Percy <mpercy@cloudera.com>

--- a/css/kudu.css
+++ b/css/kudu.css
@@ -1,3 +1,11 @@
+.row-fluid .col-lg-12 {
+    padding-bottom: 20px;
+}
+
+footer {
+    clear: both;
+}
+
 .btn-info {
     background-color: #1f99d5;
     border-color: #0e76bc;
